syntax = "proto3";
package kyc;

message KycRequest {
  int32 _id = 2;
  string cid = 3;
  string tx_signature = 4;
  string hash_data = 5;
  int64 deposited_amount = 6;
}

message KycResponse {
  string screen_cid = 1;
}

service KycService {
  rpc Verify(KycRequest) returns (KycResponse);
}